--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
-#MySQL
+#MySQL 
+#Usuario naviepics  
+#Password 1234
 mysql.datasource.username=naviepics
 mysql.datasource.password=1234
 mysql.datasource.url=jdbc:mysql://localhost:3306/NAVIEPICS_DB_MySQL?createDatabaseIfNotExist=true
@@ -7,7 +9,9 @@ mysql.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 mysql.jpa.hibernate.ddl-auto=create
 mysql.jpa.show-sql=true
 mysql.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-#Oracle
+#Oracle 
+#Usuario NAVIEPICS  
+#Password naviepics
 oracle.datasource.username=NAVIEPICS
 oracle.datasource.password=naviepics
 oracle.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
