--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ mysql.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 mysql.jpa.hibernate.ddl-auto=create-drop
 mysql.jpa.show-sql=true
-mysql.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+#mysql.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 #Oracle 
 #Usuario NAVIEPICS  
 #Password naviepics
