--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,7 +17,7 @@ oracle.datasource.password=naviepics
 oracle.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
 oracle.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 
-oracle.jpa.hibernate.ddl-auto=create
+oracle.jpa.hibernate.ddl-auto=create-drop
 #oracle.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle21cDialect
 oracle.jpa.show-sql=true
 #oracle.jpa.properties.hibernate.default_schema=xe
