--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ mysql.datasource.password=1234
 mysql.datasource.url=jdbc:mysql://localhost:3306/naviepics_db?createDatabaseIfNotExist=true
 mysql.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-mysql.jpa.hibernate.ddl-auto=create-drop
+mysql.jpa.hibernate.ddl-auto=create
 mysql.jpa.show-sql=true
 #mysql.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 #Oracle 
@@ -17,7 +17,7 @@ oracle.datasource.password=naviepics
 oracle.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
 oracle.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 
-oracle.jpa.hibernate.ddl-auto=create-drop
+oracle.jpa.hibernate.ddl-auto=create
 #oracle.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle21cDialect
 oracle.jpa.show-sql=true
 #oracle.jpa.properties.hibernate.default_schema=xe
